testing/ShouldFail/UndeclaredVar.gp
file: "a"
%%
func(){
    int a = b;
    return b;
}